--- a/doc/_layouts/home.html
+++ b/doc/_layouts/home.html
@@ -6,14 +6,20 @@
 {% block body %}
 
 <div class="jumbotron">
-    <div class="container">
+    <div class="container text-center">
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-8 col-md-offset-2">
                 <h1>{{this.title}}</h1>
-                {{this.body}}
+                <h2>{{this.tagline}}</h2>
              </div>
         </div>
     </div>
 </div>
+
+<div class="container">
+{{this.body}}
+</div>
+
+{% include 'footer.html' %}
 
 {% endblock %}
