--- a/doc/_layouts/page.html
+++ b/doc/_layouts/page.html
@@ -24,27 +24,21 @@
 
         {% block sidebar %}
         {% endblock %}
-
+ 
+        <div class="content">
         {% block content %}
-        <div class="col-md-6" data-spy="scroll" data-target="#sidenav" role="main">
-             
-            {{this.body}}
-        </div>
+            <div class="col-md-6" data-spy="scroll" data-target="#sidenav" role="main">
+                {{this.body}}
+            </div>
         {% endblock %}
+        </div>
 
     </div>
     
     {% block pagerblock %}
     {% endblock %}
 
-    <div class="footer">
-        <div style="margin: 8px">
-        {% include 'sharing.html' %}
-        </div>
-        <p class="text-center"> Content licensed under the
-           <a href="{{site.reflinks.content_license.url}}">{{site.reflinks.content_license.title}}</a>
-        </p> 
-    </div>
+    {% include 'footer.html' %}
 
 </div> 
 
