--- a/doc/_layouts/home.html
+++ b/doc/_layouts/home.html
@@ -18,7 +18,7 @@
 
 <div class="container">
 {% set news = site.reflinks['/news'].content[0] %}
-<p class="lead text-center">{{news.date|datetimeformat}}: <a href="news">{{news.title}}</a></p>
+<p class="lead text-center">{{news.date|dateformat}}: <a href="news">{{news.title}}</a></p>
 {{this.body}}
 </div>
 
