--- a/doc/_layouts/article.html
+++ b/doc/_layouts/article.html
@@ -7,7 +7,7 @@
          data-offset-top="80" 
          data-offset-bottom="60">
         <div class="well">
-            <a href="#"><em>{{this.title}}</em></a>
+            <a href="#"><strong>{{this.title}}</strong></a>
             {{this.toc}}
         </div>
     </div>
