--- a/doc/_layouts/footer.html
+++ b/doc/_layouts/footer.html
@@ -1,10 +1,11 @@
     <div class="footer">
-        <div style="margin: 8px">
+        <div style="margin: 5px">
         {% include 'sharing.html' %}
         </div>
-        <p class="text-center"> Content licensed under the
-           <a href="{{site.reflinks.content_license.url}}">{{site.reflinks.content_license.title}}</a>
+        <p> Content licensed under the
+           <a href="{{site.reflinks.content_license.url}}">{{site.reflinks.content_license.title}}</a>.
         </p> 
+        <p>Website powered by <a href="http://urubu.jandecaluwe.com">Urubu</a>.</p>
     </div>
 
 
