--- a/doc/_layouts/_base.html
+++ b/doc/_layouts/_base.html
@@ -46,7 +46,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">{{site.brand}}</a>
+          <a class="navbar-brand" href="{{site.root}}/">{{site.brand}}</a>
         </div>
         <div class="navbar-collapse collapse">
 
