--- a/doc/_layouts/_base.html
+++ b/doc/_layouts/_base.html
@@ -15,8 +15,13 @@
     {%   set theme_path = "bootstrap/" + bootstrap + "/css" %}
     {% endif %}
     <link href="//netdna.bootstrapcdn.com/{{theme_path}}/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/css/site.css" rel="stylesheet" media="screen">
-    <link href="/css/syntax.css" rel="stylesheet" media="screen">
+
+    {% set url_prefix = '' %}
+    {% if site.baseurl %}
+    {%   set url_prefix = '/' + site.baseurl %}
+    {% endif %}
+    <link href="{{url_prefix + '/css/site.css'}}" rel="stylesheet" media="screen">
+    <link href="{{url_prefix + '/css/syntax.css'}}" rel="stylesheet" media="screen">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -46,12 +51,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">{{site.brand}}</a>
+          <a class="navbar-brand" href="{{url_prefix + '/'}}">{{site.brand}}</a>
         </div>
         <div class="navbar-collapse collapse">
 
           <ul class="nav navbar-nav navbar-left">
-            {% block home %} 
+            {% block home %}
             {% endblock %}
             {% for item in site.reflinks['/'].content[:-navbar_right_items] %}
             {%   set context = '' %}
@@ -63,7 +68,7 @@
               <a href="{{item.url}}" class="dropdown-toggle" data-toggle="dropdown">{{item.title}} <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 {% for subitem in item.content %}
-                <li><a href="{{subitem.url}}">{{subitem.title}}</a></li>    
+                <li><a href="{{subitem.url}}">{{subitem.title}}</a></li>
                 {% endfor %}
               </ul>
             </li>
@@ -84,7 +89,7 @@
               <a href="{{item.url}}" class="dropdown-toggle" data-toggle="dropdown">{{item.title}} <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 {% for subitem in item.content %}
-                <li><a href="{{subitem.url}}">{{subitem.title}}</a></li>    
+                <li><a href="{{subitem.url}}">{{subitem.title}}</a></li>
                 {% endfor %}
               </ul>
             </li>
