--- a/doc/_layouts/page.html
+++ b/doc/_layouts/page.html
@@ -6,7 +6,7 @@
 
   {% block breadcrumbs %}
   <ol class="breadcrumb">
-    <li><a href="/">Home</a></li>
+    <li><a href="{{url_prefix + '/'}}">Home</a></li>
       {% for bc in this.breadcrumbs[:-1] %}
       <li><a href="{{bc.url}}">{{bc.title}}</a></li>
       {% endfor %}
@@ -15,7 +15,7 @@
   {% endblock %}
 
   <div class="page-header">
-    {% block title %} 
+    {% block title %}
     <h1>{{this.title}}</h1>
     {% endblock %}
   </div>
@@ -23,8 +23,8 @@
   <div class="row">
 
     {% block sidebar %}
-    <div class="col-md-3" role="navigation"> 
-      {% if this.toc %} 
+    <div class="col-md-3" role="navigation">
+      {% if this.toc %}
       <div class="sidebar" data-spy="affix" data-offset-top="80" data-offset-bottom="60">
         <div class="well">
           <a href="#"><strong>{{this.title}}</strong></a>
@@ -34,7 +34,7 @@
       {% endif %}
     </div>
     {% endblock %}
- 
+
     <div class="content">
       {% block content %}
       <div class="col-md-6" role="main">
@@ -44,7 +44,7 @@
     </div>
 
   </div>
-    
+
   {% if this.pager %}
   <ul class="pager">
     {% if this.prev %}
@@ -58,7 +58,7 @@
 
   {% include 'footer.html' %}
 
-</div> 
+</div>
 
 {% endblock %}
 
