--- a/doc/_layouts/page.html
+++ b/doc/_layouts/page.html
@@ -25,7 +25,9 @@
     <div class="content">
       {% block content %}
       <div class="col-md-7" role="main">
+      <main>
         {{this.body}}
+      </main>
       </div>
       {% endblock %}
     </div>
