--- a/doc/_layouts/_base.html
+++ b/doc/_layouts/_base.html
@@ -30,6 +30,8 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
   {% include 'analytics.html' %}
+  {% block head_addon %}
+  {% endblock %} 
   </head>
 
   <body>
@@ -39,7 +41,7 @@
     {% if site.navbar_inverse %}
     {%   set navbar_style = "navbar-inverse" %}
     {% endif %}
-    {% set navbar_right_items = 2 %}
+    {% set navbar_right_items = 1 %}
     {% if site.navbar_right_items %}
     {%   set navbar_right_items = site.navbar_right_items %}
     {% endif %}
@@ -77,7 +79,11 @@
             {%   endif %}
             {% endfor %}
           </ul>
-
+          <form class="navbar-form navbar-left" action="/search.html" role="search">
+            <div class="form-group">
+              <input type="text" required name="q" id="tipue_search_input" class="form-control" placeholder="Search"> 
+            </div>
+          </form>
           <ul class="nav navbar-nav navbar-right">
             {% for item in site.reflinks['/'].content[-navbar_right_items:] %}
             {%   set context = '' %}
@@ -107,9 +113,12 @@
     {% endblock %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery.js"></script> -->
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/{{bootstrap}}/js/bootstrap.min.js"></script>
+  {% block body_addon %}
+  {% endblock %} 
 
   </body>
 </html>
