--- a/doc/_layouts/_base.html
+++ b/doc/_layouts/_base.html
@@ -20,8 +20,12 @@
     {% if site.baseurl %}
     {%   set url_prefix = '/' + site.baseurl %}
     {% endif %}
+    <!-- customizations -->
     <link href="{{url_prefix + '/css/site.css'}}" rel="stylesheet" media="screen">
+    <!-- pygments -->
     <link href="{{url_prefix + '/css/syntax.css'}}" rel="stylesheet" media="screen">
+    <!-- icons -->
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
