--- a/doc/_layouts/home.html
+++ b/doc/_layouts/home.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 
-<div class="jumbotron">
+<div class="jumbotron urubu">
     <div class="container text-center">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
